# wheel_analyzer

./: .dockerignore  .env.example  .gitignore  2025-11-11 - Session summary.md  2025-11-12 - Session summary.md  2025-11-14 - Session summary.md  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.prod  GEMINI.md  HANDOFF.md  README.md  SESSION_COMPLETE.md  SESSION_SUMMARY_TASK_032.md  curatedstock_export.json  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  justfile  manage.py  pyproject.toml  pytest.ini  ruff.toml  update_remaining_tests.py
.claude/: settings.json
.gemini/: settings.json
logs/: session_end.json  session_start.json  status_line.json  user_prompt_submit.json
reference/: AD_HOC_TASKS.md  BUGS.md  REFACTORS.md  ROADMAP.md  SECURITY_AUDIT_PHASE_6_1.md
requirements/: base.txt  dev.txt  prod.txt
scanner/: admin.py  analytics.py  factories.py  filters.py  forms.py  managers.py  models.py  quota.py  scanner.py  urls.py  valuation.py  views.py
scripts/: start-dev.sh  start-prod.sh  start-system.sh
sessions/: 2025-11-07 - Session summary.md  2025-11-08 - Session summary.md  2025-11-09 - Session summary.md  2025-11-10 - Session summary.md  2025-11-10-pm - Session summary.md  2025-11-10-task-034-completion.md
specs/: phase-6.1-visualizations-analytics.md
tasks/: 000-sample.md  001-curated-stock-model.md  001-task-tracking.md  002-ansible-consolidation.md  002-data-migration.md  003-postgres-deployment.md  003-update-scanner.md  004-redis-deployment.md  004-refactor-scan-logic.md  005-automated-scanner-cron.md  005-backend-scan-view.md  (+37 more)
(+164 files in other folders)
