[project]
name = "wheel-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-allauth>=65.3.0",
    "django>=5.1.4",
    "psycopg2-binary>=2.9.10",
    "django-htmx>=1.21.0",
    "django-extensions>=3.2.3",
    "django-widget-tweaks>=1.5.0",
    "django-filter>=24.3",
    "django-environ>=0.11.2",
    "dj-database-url>=2.3.0",
    "json-log-formatter>=1.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4.6",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
]
